[package]
name = "json"
version = "0.12.2"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
description = "JSON implementation in Rust"
repository = "https://github.com/maciejhirsz/json-rust"
documentation = "https://docs.rs/json/"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
beef = "0.2.1"
fnv = "1.0.6"
