[package]
name = "json"
version = "0.12.2"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
description = "JSON implementation in Rust"
repository = "https://github.com/maciejhirsz/json-rust"
documentation = "https://docs.rs/json/"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
# beef = "0.2.1"
beef = { path = "../beef" }
fnv = "1.0.6"
ahash = "0.3.2"

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1